k8s-pac-demo/gatekeeper/k8sdisallowlatest-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowlatest
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowLatest
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdisallowlatest

        is_tagless(image) {
          not contains(image, ":")
          not contains(image, "@sha256:")
        }

        is_latest(image) {
          endswith(image, ":latest")
        }

        all_containers[c] {
          c := input.review.object.spec.containers[_]
        }
        all_containers[c] {
          c := input.review.object.spec.initContainers[_]
        }

        violation[{"msg": msg, "details": {"image": image}}] {
          c := all_containers[_]
          image := c.image
          is_tagless(image)
          msg := sprintf("Required image tag is missing for image: %v", [image])
        }

        violation[{"msg": msg, "details": {"image": image}}] {
          c := all_containers[_]
          image := c.image
          is_latest(image)
          msg := sprintf("Image tag 'latest' is not allowed: %v", [image])
        }
