k8s-pac-demo/gatekeeper/k8sdisallowprivileged-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowprivileged
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowPrivileged
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdisallowprivileged

        all_containers[c] {
          c := input.review.object.spec.containers[_]
        }
        all_containers[c] {
          c := input.review.object.spec.initContainers[_]
        }

        violation[{"msg": msg, "details": {"container": cname}}] {
          c := all_containers[_]
          c.securityContext.privileged == true
          cname := c.name
          msg := sprintf("Privileged mode is not allowed for container: %v", [cname])
        }
