k8s-pac-demo/gatekeeper/k8srequiredlabels-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: demo-required-labels
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces: ["demo-pac"]
  parameters:
    labels: ["app", "owner"]
